<resources>
    <string name="app_name">ToolStore</string>
    <string name="str_welcome">Welcome to Tool Store</string>
    <string name="str_id">ID</string>
    <string name="str_password">Password</string>
    <string name="str_login">Log in</string>
    <string name="str_register">Register</string>
    <string name="str_name">Name</string>
    <string name="str_city">City</string>
    <string name="str_zipCode">ZIP Code</string>
    <string name="str_contact">Contact Number</string>
    <string name="type1">Bolts&amp;Nuts</string>
    <string name="type2">Tools</string>
    <string name="type3">Others</string>
    <string name="type4">Cart</string>
    <string name="str_userInfo">User Info</string>
    <string name="str_addTools">Add Tools</string>
    <string name="str_add">ADD</string>
    <string name="str_checkCart">Check Orders</string>
    <string name="str_toolName">Tool Name</string>
    <string name="str_toolSize">Size</string>
    <string name="str_toolAmount">Amount</string>
    <string name="str_toolPrice">Price</string>
    <string name="str_toolMaker">Maker</string>
    <string name="str_category">Category</string>
    <string name="str_describe">Describe</string>
    <string name="str_addToCart">ADD TO CART</string>
    <string name="str_deleteFromCart">DELETE FROM CART</string>
    <string name="str_cancelOrder">Cancel Order</string>
    <string name="str_checkout">Proceed to Checkout</string>
    <string name="str_checkoutState">Current State</string>
    <string name="str_updateState">Update Current State</string>
</resources>
