<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_button2"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_name"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_userContact"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_contact"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_userID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/str_id"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_userCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/str_city"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_userZIPCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/str_zipCode"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>