<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layer_customer_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="@color/buttonLayer">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_margin="12dp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layer_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layer_customer_main"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:background="@color/buttonLayer">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:style/Widget.ActionButton"
            android:text="@string/type1"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:style/Widget.ActionButton"
            android:text="@string/type2"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:style/Widget.ActionButton"
            android:text="@string/type3"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ActionButton"
            android:layout_weight="1"
            android:text="@string/type4"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layer_buttons">

    </FrameLayout>

</RelativeLayout>