<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_button2"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_toolOrderName"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_toolName"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_toolOrderMakerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="By "
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_toolOrderMaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_toolMaker"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_toolOrderSizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Size(inch): "
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_toolOrderSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/str_toolSize"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_toolOrderAmountInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Order Amount: "
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_toolOrderAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/str_toolAmount"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_toolTotalPriceInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Total Price: "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_toolTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/str_toolPrice"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_deleteItemSelect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            android:id="@+id/tv_itemStateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="State: "
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_itemState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_checkoutState"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layer_cancelOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancelOrder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/str_cancelOrder"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_margin="5dp"
            android:background="@drawable/custom_button4"/>

    </LinearLayout>
</LinearLayout>